# blind_deconvolution

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  algorithms.html  algorithms.implementations.html  benchmark_generation.ipynb  bind_dataset.py  bind_dataset_1.py  exp_3.ipynb  extensions.py  filters.html  generate_dataset.py  generator.py  genindex.html  index.html  main.ipynb  main1488.ipynb  main3.ipynb  main4.ipynb  main_2.ipynb  metrics.py  modules.html  objects.inv  processing.extensions.html  processing.html  processing.py  prompt.txt  py-modindex.html  pyproject.toml  requirements.txt  scripts.html  search.html  searchindex.js  setup.cfg  test_bind.ipynb  test_full_process.ipynb  utils.py
.doctrees/: algorithms.doctree  algorithms.implementations.doctree  environment.pickle  filters.doctree  index.doctree  modules.doctree  processing.doctree  processing.extensions.doctree  scripts.doctree
_modules/: index.html
_sources/: algorithms.implementations.rst.txt  algorithms.rst.txt  filters.rst.txt  modules.rst.txt  processing.extensions.rst.txt  processing.rst.txt  scripts.rst.txt
algorithms/: MAP.py  README.md  __init__.py  base.py  bezoutian.py  test3_algorithm.py
dataset/: dataset.json
docs/: Makefile  build_docs.py  conf.py  index.rst  make.bat
experiments/: exp_3.ipynb
extensions/: __init__.py  base.py  hyperparameter_optimization.py  pareto_analysis.py
filters/: __init__.py  base.py  blur.py  colored_noise.py  denoise.py  distributions.py  noise.py  smooth.py
images_dataset/: dataset_bind.json
(+635 files in other folders)
