[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blind_deconvolution"
version = "0.1.0"
authors = [{ name = "Anton Bezzaborov" }, { name = "Pavel Yurov" }]
description = "Blind Image Deconvolution"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
full = [
    "scikit-image>=0.19.0",
    "opencv-python>=4.5.0",
    "optuna>=3.0.0",
    "tifffile>=2021.0.0",
    "imageio>=2.15.0",
    "PyWavelets>=1.3.0",
]

dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "ipython>=8.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[tool.setuptools]
packages = ["blind_deconvolution"]
